hphp/test/zend/good/ext/spl/tests/bug38325.php.expectf

Fatal error: Class undefined: ThisClassDoesNotExistEverFoo in %s/bug38325.php on line 3
